--- a/index.html
+++ b/index.html
@@ -52,49 +52,57 @@
             </div>
         </div>
     </nav>
-    <!--
-    <div class="home-nav">
-        <nav class="navbar navbar-expand-lg bg-body-tertiary" style="background-color: #FF9A34;">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">
-                    <img src="./images/MokeShop Logo.png" alt="Logo" width="60" height="60" class="d-inline-block align-text-top">
-                </a>
-                <a class="navbar-brand" href="#">
-                    MokeShop
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Link</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Dropdown
-                            </a>
-                            <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                            </ul>
-                        </li>
-                    </ul>
+    <!-- Featured Items Section -->
+    <section class="container mt-5">
+        <h2 class="mb-4">Featured Items</h2>
+        <div class="row">
+            <div class="col-md-3">
+                <div class="card">
+                    <img src="path/to/image1.jpg" class="card-img-top" alt="Item 1">
+                    <div class="card-body">
+                        <h5 class="card-title">Item 1</h5>
+                        <p class="card-text">$100</p>
+                        <a href="#" class="btn btn-primary">View Details</a>
+                    </div>
                 </div>
             </div>
-        </nav>
-    </div>
-    -->
+            <div class="col-md-3">
+                <div class="card">
+                    <img src="path/to/image1.jpg" class="card-img-top" alt="Item 1">
+                    <div class="card-body">
+                        <h5 class="card-title">Item 1</h5>
+                        <p class="card-text">$100</p>
+                        <a href="#" class="btn btn-primary">View Details</a>
+                    </div>
+                </div>
+            </div>
+            <!-- Repeat for more items -->
+        </div>
+    </section>
 
+    <!-- Categories Section -->
+    <section class="container mt-5">
+        <h2 class="mb-4">Categories</h2>
+        <div class="row">
+            <div class="col-md-3">
+                <div class="card">
+                    <img src="path/to/category1.jpg" class="card-img-top" alt="Category 1">
+                    <div class="card-body">
+                        <h5 class="card-title">Category 1</h5>
+                        <a href="#" class="btn btn-primary">Explore</a>
+                    </div>
+                </div>
+            </div>
+            <!-- Repeat for more categories -->
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="bg-light text-center text-lg-start mt-5">
+        <div class="container p-4">
+            <p>&copy; 2023 MokeShop. All rights reserved.</p>
+        </div>
+    </footer>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
