--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         </div>
         <nav>
             <ul>
-                <li><a href="#">Shop</a></li>
-                <li><a href="#">Deals</a></li>
-                <li><a href="#">Orders</a></li>
-                <li><a href="#">Cart (<span id="cart-count">0</span>)</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="listings.html">Listings</a></li>
+                <li><a href="sign-up.html">Sign Up</a></li>
+                <li><a href="cart.html">Cart (<span id="cart-count">0</span>)</a></li>
             </ul>
         </nav>
     </header>
@@ -30,7 +30,7 @@
     <section class="container mt-5">
         <h2 class="mb-4">Featured Items</h2>
         <div class="row">
-            <div class="col-md-3">
+            <div class="col-md-3" style="padding-bottom: 2%;">
                 <div class="card">
                     <img src="path/to/image1.jpg" class="card-img-top" alt="Item 1">
                     <div class="card-body">
@@ -40,7 +40,47 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-3" style="padding-bottom: 2%;">
+                <div class="card">
+                    <img src="path/to/image1.jpg" class="card-img-top" alt="Item 1">
+                    <div class="card-body">
+                        <h5 class="card-title">Item 1</h5>
+                        <p class="card-text">$100</p>
+                        <a href="#" class="btn btn-primary">View Details</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3" style="padding-bottom: 2%;">
+                <div class="card">
+                    <img src="path/to/image1.jpg" class="card-img-top" alt="Item 1">
+                    <div class="card-body">
+                        <h5 class="card-title">Item 1</h5>
+                        <p class="card-text">$100</p>
+                        <a href="#" class="btn btn-primary">View Details</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3" style="padding-bottom: 2%;">
+                <div class="card">
+                    <img src="path/to/image1.jpg" class="card-img-top" alt="Item 1">
+                    <div class="card-body">
+                        <h5 class="card-title">Item 1</h5>
+                        <p class="card-text">$100</p>
+                        <a href="#" class="btn btn-primary">View Details</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3" style="padding-bottom: 2%;">
+                <div class="card">
+                    <img src="path/to/image1.jpg" class="card-img-top" alt="Item 1">
+                    <div class="card-body">
+                        <h5 class="card-title">Item 1</h5>
+                        <p class="card-text">$100</p>
+                        <a href="#" class="btn btn-primary">View Details</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3" style="padding-bottom: 2%;">
                 <div class="card">
                     <img src="path/to/image1.jpg" class="card-img-top" alt="Item 1">
                     <div class="card-body">
