--- a/listings.html
+++ b/listings.html
@@ -8,18 +8,18 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-     <!-- Navigation Bar -->
-     <header>
+    <!-- Navigation Bar -->
+    <header>
         <div class="logo">MokeShop</div>
         <div class="search-bar">
             <input type="text" id="search" placeholder="Search for products..." onkeyup="searchProducts()">
         </div>
         <nav>
             <ul>
-                <li><a href="#">Shop</a></li>
-                <li><a href="#">Deals</a></li>
-                <li><a href="#">Orders</a></li>
-                <li><a href="#">Cart (<span id="cart-count">0</span>)</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="listings.html">Listings</a></li>
+                <li><a href="sign-up.html">Sign Up</a></li>
+                <li><a href="cart.html">Cart (<span id="cart-count">0</span>)</a></li>
             </ul>
         </nav>
     </header>
