--- a/test.html
+++ b/test.html
@@ -113,10 +113,10 @@
         </div>
         <nav>
             <ul>
-                <li><a href="#">Shop</a></li>
-                <li><a href="#">Deals</a></li>
-                <li><a href="#">Orders</a></li>
-                <li><a href="#">Cart (<span id="cart-count">0</span>)</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="listings.html">Listings</a></li>
+                <li><a href="sign-up.html">Sign Up</a></li>
+                <li><a href="cart.html">Cart (<span id="cart-count">0</span>)</a></li>
             </ul>
         </nav>
     </header>
