homepage like 60% completed, gna do listings and feedback

--- a/listings.html
+++ b/listings.html
@@ -30,7 +30,7 @@
         <div class="row">
             <div class="col-md-3">
                 <div class="card">
-                    <img src="path/to/image1.jpg" class="card-img-top" alt="Item 1">
+                    <img src="./images/mahjong keyboard.jpg" class="card-img-top" alt="keyboard">
                     <div class="card-body">
                         <h5 class="card-title">Item 1</h5>
                         <p class="card-text">$100</p>
