--- a/index.html
+++ b/index.html
@@ -26,15 +26,30 @@
             </ul>
         </nav>
     </header>
+    <!-- Ads Section  -->
+    <div class="ads">
+        <div class="adcontainer">
+            <!-- Left Image -->
+            <div class="left-image">
+                <img src="./images/black headphones.jpg" alt="Large Image">
+            </div>
+    
+            <!-- Right Stacked Images -->
+            <div class="right-images">
+                <img src="./images/nike airmax ltd 3 red.jpeg" alt="Top Small Image">
+                <img src="./images/mahjong keeb.jpg" alt="Bottom Small Image">
+            </div>
+        </div>
+    </div>
     <!-- Featured Items Section -->
     <section class="container mt-5">
         <h2 class="mb-4">Featured Items</h2>
         <div class="row">
             <div class="col-md-3" style="padding-bottom: 2%;">
                 <div class="card">
-                    <img src="path/to/image1.jpg" class="card-img-top" alt="Item 1">
+                    <img src="./images/black headphones.jpg" class="card-img-top" alt="Item 1">
                     <div class="card-body">
-                        <h5 class="card-title">Item 1</h5>
+                        <h5 class="card-title">Headphones</h5>
                         <p class="card-text">$100</p>
                         <a href="#" class="btn btn-primary">View Details</a>
                     </div>
@@ -42,9 +57,9 @@
             </div>
             <div class="col-md-3" style="padding-bottom: 2%;">
                 <div class="card">
-                    <img src="path/to/image1.jpg" class="card-img-top" alt="Item 1">
+                    <img src="./images/mahjong keeb.jpg" class="card-img-top" alt="Item 1">
                     <div class="card-body">
-                        <h5 class="card-title">Item 1</h5>
+                        <h5 class="card-title">Mahjong Keeb</h5>
                         <p class="card-text">$100</p>
                         <a href="#" class="btn btn-primary">View Details</a>
                     </div>
@@ -52,9 +67,9 @@
             </div>
             <div class="col-md-3" style="padding-bottom: 2%;">
                 <div class="card">
-                    <img src="path/to/image1.jpg" class="card-img-top" alt="Item 1">
+                    <img src="./images/mic.jpg" class="card-img-top" alt="Item 1">
                     <div class="card-body">
-                        <h5 class="card-title">Item 1</h5>
+                        <h5 class="card-title">Expensive mic</h5>
                         <p class="card-text">$100</p>
                         <a href="#" class="btn btn-primary">View Details</a>
                     </div>
@@ -62,9 +77,9 @@
             </div>
             <div class="col-md-3" style="padding-bottom: 2%;">
                 <div class="card">
-                    <img src="path/to/image1.jpg" class="card-img-top" alt="Item 1">
+                    <img src="./images/wireless mouse.jpg" class="card-img-top" alt="Item 1">
                     <div class="card-body">
-                        <h5 class="card-title">Item 1</h5>
+                        <h5 class="card-title">Logitech Mouse</h5>
                         <p class="card-text">$100</p>
                         <a href="#" class="btn btn-primary">View Details</a>
                     </div>
@@ -72,9 +87,9 @@
             </div>
             <div class="col-md-3" style="padding-bottom: 2%;">
                 <div class="card">
-                    <img src="path/to/image1.jpg" class="card-img-top" alt="Item 1">
+                    <img src="./images/nike airmax ltd 3 red.jpeg" class="card-img-top" alt="Item 1">
                     <div class="card-body">
-                        <h5 class="card-title">Item 1</h5>
+                        <h5 class="card-title">Nike Airmax LTD 3 Red</h5>
                         <p class="card-text">$100</p>
                         <a href="#" class="btn btn-primary">View Details</a>
                     </div>
@@ -82,9 +97,9 @@
             </div>
             <div class="col-md-3" style="padding-bottom: 2%;">
                 <div class="card">
-                    <img src="path/to/image1.jpg" class="card-img-top" alt="Item 1">
+                    <img src="./images/winnie the pooh mahjong tiles.webp" class="card-img-top" alt="Item 1">
                     <div class="card-body">
-                        <h5 class="card-title">Item 1</h5>
+                        <h5 class="card-title">Winnie the Pooh Mahjong tiles</h5>
                         <p class="card-text">$100</p>
                         <a href="#" class="btn btn-primary">View Details</a>
                     </div>
@@ -95,19 +110,113 @@
     </section>
 
     <!-- Categories Section -->
-    <section class="container mt-5">
-        <h2 class="mb-4">Categories</h2>
-        <div class="row">
-            <div class="col-md-3">
-                <div class="card">
-                    <img src="path/to/category1.jpg" class="card-img-top" alt="Category 1">
-                    <div class="card-body">
-                        <h5 class="card-title">Category 1</h5>
-                        <a href="#" class="btn btn-primary">Explore</a>
+    <div>
+        <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner" style="background-color: rgb(255, 255, 255);">
+                <div class="carousel-item active">
+                    <img src="./images/mahjong keeb.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="./images/nike airmax ltd 3 red.jpeg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="./images/winnie the pooh mahjong tiles.webp" class="d-block w-100" alt="...">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+    </div>
+
+    <section class="py-4">
+        <div class="container-lg">
+            <h2 class="my-4">People are also looking for</h2>
+            <a href="#" class="btn btn-warning me-2 mb-2">Blue diamon almonds</a>
+            <a href="#" class="btn btn-warning me-2 mb-2">Angie’s Boomchickapop Corn</a>
+            <a href="#" class="btn btn-warning me-2 mb-2">Salty kettle Corn</a>
+            <a href="#" class="btn btn-warning me-2 mb-2">Chobani Greek Yogurt</a>
+            <a href="#" class="btn btn-warning me-2 mb-2">Sweet Vanilla Yogurt</a>
+            <a href="#" class="btn btn-warning me-2 mb-2">Foster Farms Takeout Crispy wings</a>
+            <a href="#" class="btn btn-warning me-2 mb-2">Warrior Blend Organic</a>
+            <a href="#" class="btn btn-warning me-2 mb-2">Chao Cheese Creamy</a>
+            <a href="#" class="btn btn-warning me-2 mb-2">Chicken meatballs</a>
+            <a href="#" class="btn btn-warning me-2 mb-2">Blue diamon almonds</a>
+            <a href="#" class="btn btn-warning me-2 mb-2">Angie’s Boomchickapop Corn</a>
+            <a href="#" class="btn btn-warning me-2 mb-2">Salty kettle Corn</a>
+            <a href="#" class="btn btn-warning me-2 mb-2">Chobani Greek Yogurt</a>
+            <a href="#" class="btn btn-warning me-2 mb-2">Sweet Vanilla Yogurt</a>
+            <a href="#" class="btn btn-warning me-2 mb-2">Foster Farms Takeout Crispy wings</a>
+            <a href="#" class="btn btn-warning me-2 mb-2">Warrior Blend Organic</a>
+            <a href="#" class="btn btn-warning me-2 mb-2">Chao Cheese Creamy</a>
+            <a href="#" class="btn btn-warning me-2 mb-2">Chicken meatballs</a>
+        </div>
+    </section>
+
+    <section class="py-5">
+        <div class="container-lg">
+            <div class="row row-cols-1 row-cols-sm-3 row-cols-lg-5">
+                <div class="col">
+                    <div class="card mb-3 border border-dark-subtle p-3">
+                        <div class="text-dark mb-3">
+                            <svg width="32" height="32"><use xlink:href="#package"></use></svg>
+                        </div>
+                        <div class="card-body p-0">
+                            <h5>Free delivery</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipi elit.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card mb-3 border border-dark-subtle p-3">
+                        <div class="text-dark mb-3">
+                            <svg width="32" height="32"><use xlink:href="#secure"></use></svg>
+                        </div>
+                        <div class="card-body p-0">
+                            <h5>100% secure payment</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipi elit.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card mb-3 border border-dark-subtle p-3">
+                        <div class="text-dark mb-3">
+                            <svg width="32" height="32"><use xlink:href="#quality"></use></svg>
+                        </div>
+                        <div class="card-body p-0">
+                            <h5>Quality guarantee</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipi elit.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card mb-3 border border-dark-subtle p-3">
+                        <div class="text-dark mb-3">
+                            <svg width="32" height="32"><use xlink:href="#savings"></use></svg>
+                        </div>
+                        <div class="card-body p-0">
+                            <h5>guaranteed savings</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipi elit.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card mb-3 border border-dark-subtle p-3">
+                        <div class="text-dark mb-3">
+                            <svg width="32" height="32"><use xlink:href="#offers"></use></svg>
+                        </div>
+                        <div class="card-body p-0">
+                            <h5>Daily offers</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipi elit.</p>
+                        </div>
                     </div>
                 </div>
             </div>
-            <!-- Repeat for more categories -->
         </div>
     </section>
 
