changed the small part at the bottom after the carousel part

--- a/index.html
+++ b/index.html
@@ -105,6 +105,66 @@
                     </div>
                 </div>
             </div>
+            <div class="col-md-3" style="padding-bottom: 2%;">
+                <div class="card">
+                    <img src="./images/black headphones.jpg" class="card-img-top" alt="Item 1">
+                    <div class="card-body">
+                        <h5 class="card-title">Headphones</h5>
+                        <p class="card-text">$100</p>
+                        <a href="#" class="btn btn-primary">View Details</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3" style="padding-bottom: 2%;">
+                <div class="card">
+                    <img src="./images/mahjong keeb.jpg" class="card-img-top" alt="Item 1">
+                    <div class="card-body">
+                        <h5 class="card-title">Mahjong Keeb</h5>
+                        <p class="card-text">$100</p>
+                        <a href="#" class="btn btn-primary">View Details</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3" style="padding-bottom: 2%;">
+                <div class="card">
+                    <img src="./images/mic.jpg" class="card-img-top" alt="Item 1">
+                    <div class="card-body">
+                        <h5 class="card-title">Expensive mic</h5>
+                        <p class="card-text">$100</p>
+                        <a href="#" class="btn btn-primary">View Details</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3" style="padding-bottom: 2%;">
+                <div class="card">
+                    <img src="./images/wireless mouse.jpg" class="card-img-top" alt="Item 1">
+                    <div class="card-body">
+                        <h5 class="card-title">Logitech Mouse</h5>
+                        <p class="card-text">$100</p>
+                        <a href="#" class="btn btn-primary">View Details</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3" style="padding-bottom: 2%;">
+                <div class="card">
+                    <img src="./images/nike airmax ltd 3 red.jpeg" class="card-img-top" alt="Item 1">
+                    <div class="card-body">
+                        <h5 class="card-title">Nike Airmax LTD 3 Red</h5>
+                        <p class="card-text">$100</p>
+                        <a href="#" class="btn btn-primary">View Details</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3" style="padding-bottom: 2%;">
+                <div class="card">
+                    <img src="./images/winnie the pooh mahjong tiles.webp" class="card-img-top" alt="Item 1">
+                    <div class="card-body">
+                        <h5 class="card-title">Winnie the Pooh Mahjong tiles</h5>
+                        <p class="card-text">$100</p>
+                        <a href="#" class="btn btn-primary">View Details</a>
+                    </div>
+                </div>
+            </div>
             <!-- Repeat for more items -->
         </div>
     </section>
@@ -137,24 +197,24 @@
     <section class="py-4">
         <div class="container-lg">
             <h2 class="my-4">People are also looking for</h2>
-            <a href="#" class="btn btn-warning me-2 mb-2">Blue diamon almonds</a>
-            <a href="#" class="btn btn-warning me-2 mb-2">Angie’s Boomchickapop Corn</a>
-            <a href="#" class="btn btn-warning me-2 mb-2">Salty kettle Corn</a>
-            <a href="#" class="btn btn-warning me-2 mb-2">Chobani Greek Yogurt</a>
-            <a href="#" class="btn btn-warning me-2 mb-2">Sweet Vanilla Yogurt</a>
-            <a href="#" class="btn btn-warning me-2 mb-2">Foster Farms Takeout Crispy wings</a>
-            <a href="#" class="btn btn-warning me-2 mb-2">Warrior Blend Organic</a>
-            <a href="#" class="btn btn-warning me-2 mb-2">Chao Cheese Creamy</a>
-            <a href="#" class="btn btn-warning me-2 mb-2">Chicken meatballs</a>
-            <a href="#" class="btn btn-warning me-2 mb-2">Blue diamon almonds</a>
-            <a href="#" class="btn btn-warning me-2 mb-2">Angie’s Boomchickapop Corn</a>
-            <a href="#" class="btn btn-warning me-2 mb-2">Salty kettle Corn</a>
-            <a href="#" class="btn btn-warning me-2 mb-2">Chobani Greek Yogurt</a>
-            <a href="#" class="btn btn-warning me-2 mb-2">Sweet Vanilla Yogurt</a>
-            <a href="#" class="btn btn-warning me-2 mb-2">Foster Farms Takeout Crispy wings</a>
-            <a href="#" class="btn btn-warning me-2 mb-2">Warrior Blend Organic</a>
-            <a href="#" class="btn btn-warning me-2 mb-2">Chao Cheese Creamy</a>
-            <a href="#" class="btn btn-warning me-2 mb-2">Chicken meatballs</a>
+            <a href="#" class="btn btn-warning me-2 mb-2">Smartphones & Accessories</a>
+            <a href="#" class="btn btn-warning me-2 mb-2">Laptops & Tablets</a>
+            <a href="#" class="btn btn-warning me-2 mb-2">Gaming Consoles</a>
+            <a href="#" class="btn btn-warning me-2 mb-2">Wireless Earbuds</a>
+            <a href="#" class="btn btn-warning me-2 mb-2">Smartwatches</a>
+            <a href="#" class="btn btn-warning me-2 mb-2">Home Security Cameras</a>
+            <a href="#" class="btn btn-warning me-2 mb-2">Bluetooth Speakers</a>
+            <a href="#" class="btn btn-warning me-2 mb-2">Mechanical Keyboards</a>
+            <a href="#" class="btn btn-warning me-2 mb-2">DSLR Cameras</a>
+            <a href="#" class="btn btn-warning me-2 mb-2">Office Chairs</a>
+            <a href="#" class="btn btn-warning me-2 mb-2">Fitness Trackers</a>
+            <a href="#" class="btn btn-warning me-2 mb-2">Graphic Tablets</a>
+            <a href="#" class="btn btn-warning me-2 mb-2">Portable Power Banks</a>
+            <a href="#" class="btn btn-warning me-2 mb-2">Smart Home Devices</a>
+            <a href="#" class="btn btn-warning me-2 mb-2">Books & Stationery</a>
+            <a href="#" class="btn btn-warning me-2 mb-2">Car Accessories</a>
+            <a href="#" class="btn btn-warning me-2 mb-2">Fashion & Clothing</a>
+            <a href="#" class="btn btn-warning me-2 mb-2">Collectible Action Figures</a>
         </div>
     </section>
 
