added details and cart html

--- a/details.html
+++ b/details.html
@@ -17,14 +17,12 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="listings.html">Listings</a></li>
                 <li><a href="sign-up.html">Sign Up</a></li>
+                <li><a href="feedback.html">Sign Up</a></li>
                 <li><a href="cart.html">Cart (<span id="cart-count">0</span>)</a></li>
             </ul>
         </nav>
     </header>
-    <section class="test-content">
-        <h2>Test Page</h2>
-        <p>This is a test page.</p>
-    </section>
+    
     <footer class="bg-custom">
         <p>&copy; 2025 MokeShop. All rights reserved.</p>
     </footer>
