--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="listings.html">Listings</a></li>
                 <li><a href="sign-up.html">Sign Up</a></li>
+                <li><a href="feedback.html">Feedback</a></li>
                 <li><a href="cart.html">Cart (<span id="cart-count">0</span>)</a></li>
             </ul>
         </nav>
