--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
     </section>
 
     <!-- Footer -->
-    <footer class="bg-light text-center text-lg-start mt-5">
+    <footer class="bg-dark text-center text-lg-start mt-5">
         <div class="container p-4">
             <p>&copy; 2023 MokeShop. All rights reserved.</p>
         </div>
