--- a/sign-up.html
+++ b/sign-up.html
@@ -57,7 +57,12 @@
             </form>
         </div>
     </div>
-    
+    <!-- Footer -->
+    <footer class="bg-dark text-center text-lg-start mt-5">
+        <div class="container p-4">
+            <p>&copy; 2023 MokeShop. All rights reserved.</p>
+        </div>
+    </footer>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
