--- a/test.html
+++ b/test.html
@@ -135,8 +135,10 @@
     </section>
     
     <!-- Footer -->
-    <footer>
-        <p>&copy; 2025 MokeShop. All rights reserved.</p>
+    <footer class="bg-dark text-center text-lg-start mt-5">
+        <div class="container p-4">
+            <p>&copy; 2023 MokeShop. All rights reserved.</p>
+        </div>
     </footer>
     
     <script>
