added images for homepage and changed it up

--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
         <div class="adcontainer">
             <!-- Left Image -->
             <div class="left-image">
-                <img src="./images/black headphones.jpg" alt="Large Image">
+                <img src="./images/shopping bag.jpg" alt="Large Image">
             </div>
     
             <!-- Right Stacked Images -->
             <div class="right-images">
-                <img src="./images/nike airmax ltd 3 red.jpeg" alt="Top Small Image">
-                <img src="./images/mahjong keeb.jpg" alt="Bottom Small Image">
+                <img src="./images/2 chairs.jpg" alt="Top Small Image">
+                <img src="./images/table of lectronics.jpg" alt="Bottom Small Image">
             </div>
         </div>
     </div>
     <!-- Featured Items Section -->
     <section class="container mt-5">
-        <h2 class="mb-4">Featured Items</h2>
+        <h2 class="mb-4"><b>Featured Items</b></h2>
         <div class="row">
             <div class="col-md-3" style="padding-bottom: 2%;">
                 <div class="card">
@@ -197,7 +197,7 @@
 
     <section class="py-4">
         <div class="container-lg">
-            <h2 class="my-4">People are also looking for</h2>
+            <h2 class="my-4"><b>People are also looking for</b></h2>
             <a href="#" class="btn btn-warning me-2 mb-2">Smartphones & Accessories</a>
             <a href="#" class="btn btn-warning me-2 mb-2">Laptops & Tablets</a>
             <a href="#" class="btn btn-warning me-2 mb-2">Gaming Consoles</a>
@@ -221,65 +221,46 @@
 
     <section class="py-5">
         <div class="container-lg">
-            <div class="row row-cols-1 row-cols-sm-3 row-cols-lg-5">
+            <div class="row row-cols-1 row-cols-sm-3 row-cols-lg-5 g-3">
                 <div class="col">
-                    <div class="card mb-3 border border-dark-subtle p-3">
-                        <div class="text-dark mb-3">
-                            <svg width="32" height="32"><use xlink:href="#package"></use></svg>
-                        </div>
-                        <div class="card-body p-0">
-                            <h5>Free delivery</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipi elit.</p>
-                        </div>
+                    <div class="benefit-card">
+                        <img src="./images/delivery.png" alt="Free Delivery" class="benefit-img">
+                        <h5><b>Free delivery</b></h5>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipi elit.</p>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card mb-3 border border-dark-subtle p-3">
-                        <div class="text-dark mb-3">
-                            <svg width="32" height="32"><use xlink:href="#secure"></use></svg>
-                        </div>
-                        <div class="card-body p-0">
-                            <h5>100% secure payment</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipi elit.</p>
-                        </div>
+                    <div class="benefit-card">
+                        <img src="./images/secure payment.png" alt="Secure Payment" class="benefit-img">
+                        <h5><b>100% secure payment</b></h5>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipi elit.</p>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card mb-3 border border-dark-subtle p-3">
-                        <div class="text-dark mb-3">
-                            <svg width="32" height="32"><use xlink:href="#quality"></use></svg>
-                        </div>
-                        <div class="card-body p-0">
-                            <h5>Quality guarantee</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipi elit.</p>
-                        </div>
+                    <div class="benefit-card">
+                        <img src="./images/quality guarantee.jpg" alt="Quality Guarantee" class="benefit-img">
+                        <h5><b>Quality guarantee</b></h5>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipi elit.</p>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card mb-3 border border-dark-subtle p-3">
-                        <div class="text-dark mb-3">
-                            <svg width="32" height="32"><use xlink:href="#savings"></use></svg>
-                        </div>
-                        <div class="card-body p-0">
-                            <h5>guaranteed savings</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipi elit.</p>
-                        </div>
+                    <div class="benefit-card">
+                        <img src="./images/guaranteed-savings.png" alt="Guaranteed Savings" class="benefit-img">
+                        <h5><b>Guaranteed savings</b></h5>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipi elit.</p>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card mb-3 border border-dark-subtle p-3">
-                        <div class="text-dark mb-3">
-                            <svg width="32" height="32"><use xlink:href="#offers"></use></svg>
-                        </div>
-                        <div class="card-body p-0">
-                            <h5>Daily offers</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipi elit.</p>
-                        </div>
+                    <div class="benefit-card">
+                        <img src="./images/daily deals.png" alt="Daily Offers" class="benefit-img">
+                        <h5><b>Daily offers</b></h5>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipi elit.</p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+    
 
     <!-- Footer -->
     <footer class="bg-dark text-center text-lg-start mt-5">
