fixed my js im done with the search and view details

--- a/feedback.html
+++ b/feedback.html
@@ -72,6 +72,12 @@
                     <input type="file" id="imageUpload" name="image" accept="image/*">
                 </div>
             </div>
+
+            <!-- Actual Feedback -->
+            <div class="form-group">
+                <label for="feedback"><span>5.</span> Feedback</label>
+                <input type="text" id="feedback" placeholder="Enter your feedback here">
+            </div>
             
             <!-- Submit Button -->
             <button type="submit">Submit Feedback</button>
