--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
         <div class="adcontainer">
             <!-- Left Image -->
             <div class="left-image">
-                <img src="./images/shopping bag.jpg" alt="Large Image">
+                <img src="./images/shopping-bag.jpg" alt="Large Image">
             </div>
     
             <!-- Right Stacked Images -->
             <div class="right-images">
-                <img src="./images/2 chairs.jpg" alt="Top Small Image">
-                <img src="./images/table of lectronics.jpg" alt="Bottom Small Image">
+                <img src="./images/2-chairs.jpg" alt="Top Small Image">
+                <img src="./images/table-of-lectronics.jpg" alt="Bottom Small Image">
             </div>
         </div>
     </div>
@@ -48,21 +48,21 @@
         <div class="row">
             <div class="col-md-3" style="padding-bottom: 2%;">
                 <div class="card">
-                    <img src="./images/black headphones.jpg" class="card-img-top" alt="Item 1">
+                    <img src="./images/black-headphones.jpg" class="card-img-top" alt="Item 1">
                     <div class="card-body">
                         <h5 class="card-title">Headphones</h5>
                         <p class="card-text">$100</p>
-                        <a href="#" class="btn btn-primary">View Details</a>
+                        <a href="details.html" class="btn btn-primary view-details" data-name="Headphones" data-price="$100" data-image="./images/black-headphones.jpg">View Details</a>
                     </div>
                 </div>
             </div>
             <div class="col-md-3" style="padding-bottom: 2%;">
                 <div class="card">
-                    <img src="./images/mahjong keeb.jpg" class="card-img-top" alt="Item 1">
+                    <img src="./images/mahjong-keeb.jpg" class="card-img-top" alt="Item 1">
                     <div class="card-body">
                         <h5 class="card-title">Mahjong Keeb</h5>
                         <p class="card-text">$100</p>
-                        <a href="#" class="btn btn-primary">View Details</a>
+                        <a href="details.html" class="btn btn-primary view-details" data-name="Mahjong Keeb" data-price="$100" data-image="./images/mahjong-keeb.jpg">View Details</a>
                     </div>
                 </div>
             </div>
@@ -72,57 +72,57 @@
                     <div class="card-body">
                         <h5 class="card-title">Expensive mic</h5>
                         <p class="card-text">$100</p>
-                        <a href="#" class="btn btn-primary">View Details</a>
+                        <a href="details.html" class="btn btn-primary view-details" data-name="Expensive mic" data-price="$100" data-image="./images/mic.jpg">View Details</a>
                     </div>
                 </div>
             </div>
             <div class="col-md-3" style="padding-bottom: 2%;">
                 <div class="card">
-                    <img src="./images/wireless mouse.jpg" class="card-img-top" alt="Item 1">
+                    <img src="./images/wireless-mouse.jpg" class="card-img-top" alt="Item 1">
                     <div class="card-body">
                         <h5 class="card-title">Logitech Mouse</h5>
                         <p class="card-text">$100</p>
-                        <a href="#" class="btn btn-primary">View Details</a>
+                        <a href="details.html" class="btn btn-primary view-details" data-name="Logitech Mouse" data-price="$100" data-image="./images/wireless-mouse.jpg">View Details</a>
                     </div>
                 </div>
             </div>
             <div class="col-md-3" style="padding-bottom: 2%;">
                 <div class="card">
-                    <img src="./images/nike airmax ltd 3 red.jpeg" class="card-img-top" alt="Item 1">
+                    <img src="./images/nike-airmax-ltd-3-red.jpeg" class="card-img-top" alt="Item 1">
                     <div class="card-body">
                         <h5 class="card-title">Nike Airmax LTD 3 Red</h5>
                         <p class="card-text">$100</p>
-                        <a href="#" class="btn btn-primary">View Details</a>
+                        <a href="details.html" class="btn btn-primary view-details" data-name="Nike Airmax LTD 3 Red" data-price="$100" data-image="./images/nike-airmax-ltd-3-red.jpeg" data-description="Shoes.">View Details</a>
                     </div>
                 </div>
             </div>
             <div class="col-md-3" style="padding-bottom: 2%;">
                 <div class="card">
-                    <img src="./images/winnie the pooh mahjong tiles.webp" class="card-img-top" alt="Item 1">
+                    <img src="./images/winnie-the-pooh-mahjong-tiles.webp" class="card-img-top" alt="Item 1">
                     <div class="card-body">
                         <h5 class="card-title">Winnie the Pooh Mahjong tiles</h5>
                         <p class="card-text">$100</p>
-                        <a href="#" class="btn btn-primary">View Details</a>
+                        <a href="details.html" class="btn btn-primary view-details" data-name="Winnie the Pooh Mahjong tiles" data-price="$100" data-image="./images/winnie-the-pooh-mahjong-tiles.webp">View Details</a>
                     </div>
                 </div>
             </div>
             <div class="col-md-3" style="padding-bottom: 2%;">
                 <div class="card">
-                    <img src="./images/black headphones.jpg" class="card-img-top" alt="Item 1">
+                    <img src="./images/black-headphones.jpg" class="card-img-top" alt="Item 1">
                     <div class="card-body">
                         <h5 class="card-title">Headphones</h5>
                         <p class="card-text">$100</p>
-                        <a href="#" class="btn btn-primary">View Details</a>
+                        <a href="details.html" class="btn btn-primary view-details" data-name="Headphones" data-price="$100" data-image="./images/black-headphones.jpg">View Details</a>
                     </div>
                 </div>
             </div>
             <div class="col-md-3" style="padding-bottom: 2%;">
                 <div class="card">
-                    <img src="./images/mahjong keeb.jpg" class="card-img-top" alt="Item 1">
+                    <img src="./images/mahjong-keeb.jpg" class="card-img-top" alt="Item 1">
                     <div class="card-body">
                         <h5 class="card-title">Mahjong Keeb</h5>
                         <p class="card-text">$100</p>
-                        <a href="#" class="btn btn-primary">View Details</a>
+                        <a href="details.html" class="btn btn-primary view-details" data-name="Mahjong Keeb" data-price="$100" data-image="./images/mahjong-keeb.jpg">View Details</a>
                     </div>
                 </div>
             </div>
@@ -132,37 +132,37 @@
                     <div class="card-body">
                         <h5 class="card-title">Expensive mic</h5>
                         <p class="card-text">$100</p>
-                        <a href="#" class="btn btn-primary">View Details</a>
+                        <a href="details.html" class="btn btn-primary view-details" data-name="Expensive mic" data-price="$100" data-image="./images/mic.jpg">View Details</a>
                     </div>
                 </div>
             </div>
             <div class="col-md-3" style="padding-bottom: 2%;">
                 <div class="card">
-                    <img src="./images/wireless mouse.jpg" class="card-img-top" alt="Item 1">
+                    <img src="./images/wireless-mouse.jpg" class="card-img-top" alt="Item 1">
                     <div class="card-body">
                         <h5 class="card-title">Logitech Mouse</h5>
                         <p class="card-text">$100</p>
-                        <a href="#" class="btn btn-primary">View Details</a>
+                        <a href="details.html" class="btn btn-primary view-details" data-name="Logitech Mouse" data-price="$100" data-image="./images/wireless-mouse.jpg">View Details</a>
                     </div>
                 </div>
             </div>
             <div class="col-md-3" style="padding-bottom: 2%;">
                 <div class="card">
-                    <img src="./images/nike airmax ltd 3 red.jpeg" class="card-img-top" alt="Item 1">
+                    <img src="./images/nike-airmax-ltd-3-red.jpeg" class="card-img-top" alt="Item 1">
                     <div class="card-body">
                         <h5 class="card-title">Nike Airmax LTD 3 Red</h5>
                         <p class="card-text">$100</p>
-                        <a href="#" class="btn btn-primary">View Details</a>
+                        <a href="details.html" class="btn btn-primary view-details" data-name="Nike Airmax LTD 3 Red" data-price="$100" data-image="./images/nike-airmax-ltd-3-red.jpeg" data-description="Shoes.">View Details</a>
                     </div>
                 </div>
             </div>
             <div class="col-md-3" style="padding-bottom: 2%;">
                 <div class="card">
-                    <img src="./images/winnie the pooh mahjong tiles.webp" class="card-img-top" alt="Item 1">
+                    <img src="./images/winnie-the-pooh-mahjong-tiles.webp" class="card-img-top" alt="Item 1">
                     <div class="card-body">
                         <h5 class="card-title">Winnie the Pooh Mahjong tiles</h5>
                         <p class="card-text">$100</p>
-                        <a href="#" class="btn btn-primary">View Details</a>
+                        <a href="details.html" class="btn btn-primary view-details" data-name="Winnie the Pooh Mahjong tiles" data-price="$100" data-image="./images/winnie-the-pooh-mahjong-tiles.webp">View Details</a>
                     </div>
                 </div>
             </div>
@@ -175,13 +175,13 @@
         <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner" style="background-color: rgb(255, 255, 255);">
                 <div class="carousel-item active">
-                    <img src="./images/mahjong keeb.jpg" class="d-block w-100" alt="...">
+                    <img src="./images/mahjong-keeb.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="./images/nike airmax ltd 3 red.jpeg" class="d-block w-100" alt="...">
+                    <img src="./images/nike-airmax-ltd-3-red.jpeg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="./images/winnie the pooh mahjong tiles.webp" class="d-block w-100" alt="...">
+                    <img src="./images/winnie-the-pooh-mahjong-tiles.webp" class="d-block w-100" alt="...">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
@@ -270,5 +270,6 @@
     </footer>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
 </body>
 </html>
