--- a/details.html
+++ b/details.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MokeShop - Test</title>
+    <title>Product Details - MokeShop</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header class="home-nav">
+    <!-- Navigation Bar -->
+    <header>
         <div class="logo">MokeShop</div>
         <div class="search-bar">
             <input type="text" id="search" placeholder="Search for products...">
@@ -22,9 +24,41 @@
             </ul>
         </nav>
     </header>
-    
-    <footer class="bg-custom">
-        <p>&copy; 2025 MokeShop. All rights reserved.</p>
+
+    <main class="container my-5">
+        <div class="row">
+            <div class="col-md-6">
+                <div class="product-image-container">
+                    <img id="product-image" src="" alt="Product Image" class="img-fluid rounded shadow">
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="product-info p-4">
+                    <h1 id="product-name"></h1>
+                    <p id="product-price" class="h3 text-primary"></p>
+                    <div class="product-description mb-4">
+                        <h4>Product Description</h4>
+                        <p id="product-description"></p>
+                    </div>
+                    <button class="btn btn-primary btn-lg mb-3 w-100">Add to Cart</button>
+                    <div class="product-meta">
+                        <p><strong>Availability:</strong> In Stock</p>
+                        <p><strong>Category:</strong> Electronics</p>
+                        <p><strong>SKU:</strong> PROD-001</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <!-- Footer -->
+    <footer class="bg-dark text-white text-center py-3">
+        <div class="container">
+            <p class="mb-0">&copy; 2024 MokeShop. All rights reserved.</p>
+        </div>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
