--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Headphones</h5>
                         <p class="card-text">$100</p>
-                        <a href="details.html" class="btn btn-primary view-details" data-name="Headphones" data-price="$100" data-image="./images/black-headphones.jpg">View Details</a>
+                        <a href="details.html" class="btn btn-primary view-details" data-name="Headphones" data-price="$100" data-image="./images/black-headphones.jpg" data-description="Sony XM5.">View Details</a>
                     </div>
                 </div>
             </div>
@@ -62,7 +62,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Mahjong Keeb</h5>
                         <p class="card-text">$100</p>
-                        <a href="details.html" class="btn btn-primary view-details" data-name="Mahjong Keeb" data-price="$100" data-image="./images/mahjong-keeb.jpg">View Details</a>
+                        <a href="details.html" class="btn btn-primary view-details" data-name="Mahjong Keeb" data-price="$100" data-image="./images/mahjong-keeb.jpg" data-description="Keyboard cos imagine not having one.">View Details</a>
                     </div>
                 </div>
             </div>
@@ -72,7 +72,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Expensive mic</h5>
                         <p class="card-text">$100</p>
-                        <a href="details.html" class="btn btn-primary view-details" data-name="Expensive mic" data-price="$100" data-image="./images/mic.jpg">View Details</a>
+                        <a href="details.html" class="btn btn-primary view-details" data-name="Expensive mic" data-price="$100" data-image="./images/mic.jpg" data-description="mikes phone.">View Details</a>
                     </div>
                 </div>
             </div>
@@ -82,7 +82,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Logitech Mouse</h5>
                         <p class="card-text">$100</p>
-                        <a href="details.html" class="btn btn-primary view-details" data-name="Logitech Mouse" data-price="$100" data-image="./images/wireless-mouse.jpg">View Details</a>
+                        <a href="details.html" class="btn btn-primary view-details" data-name="Logitech Mouse" data-price="$100" data-image="./images/wireless-mouse.jpg" data-description="Logitech g503.">View Details</a>
                     </div>
                 </div>
             </div>
@@ -102,7 +102,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Winnie the Pooh Mahjong tiles</h5>
                         <p class="card-text">$100</p>
-                        <a href="details.html" class="btn btn-primary view-details" data-name="Winnie the Pooh Mahjong tiles" data-price="$100" data-image="./images/winnie-the-pooh-mahjong-tiles.webp">View Details</a>
+                        <a href="details.html" class="btn btn-primary view-details" data-name="Winnie the Pooh Mahjong tiles" data-price="$100" data-image="./images/winnie-the-pooh-mahjong-tiles.webp" data-description="Mahjong addicts dream.">View Details</a>
                     </div>
                 </div>
             </div>
@@ -112,7 +112,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Headphones</h5>
                         <p class="card-text">$100</p>
-                        <a href="details.html" class="btn btn-primary view-details" data-name="Headphones" data-price="$100" data-image="./images/black-headphones.jpg">View Details</a>
+                        <a href="details.html" class="btn btn-primary view-details" data-name="Headphones" data-price="$100" data-image="./images/black-headphones.jpg" data-description="Sony XM5.">View Details</a>
                     </div>
                 </div>
             </div>
@@ -122,7 +122,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Mahjong Keeb</h5>
                         <p class="card-text">$100</p>
-                        <a href="details.html" class="btn btn-primary view-details" data-name="Mahjong Keeb" data-price="$100" data-image="./images/mahjong-keeb.jpg">View Details</a>
+                        <a href="details.html" class="btn btn-primary view-details" data-name="Mahjong Keeb" data-price="$100" data-image="./images/mahjong-keeb.jpg" data-description="Keyboard cos imagine not having one.">View Details</a>
                     </div>
                 </div>
             </div>
@@ -132,7 +132,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Expensive mic</h5>
                         <p class="card-text">$100</p>
-                        <a href="details.html" class="btn btn-primary view-details" data-name="Expensive mic" data-price="$100" data-image="./images/mic.jpg">View Details</a>
+                        <a href="details.html" class="btn btn-primary view-details" data-name="Expensive mic" data-price="$100" data-image="./images/mic.jpg" data-description="mikes phone.">View Details</a>
                     </div>
                 </div>
             </div>
@@ -142,7 +142,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Logitech Mouse</h5>
                         <p class="card-text">$100</p>
-                        <a href="details.html" class="btn btn-primary view-details" data-name="Logitech Mouse" data-price="$100" data-image="./images/wireless-mouse.jpg">View Details</a>
+                        <a href="details.html" class="btn btn-primary view-details" data-name="Logitech Mouse" data-price="$100" data-image="./images/wireless-mouse.jpg" data-description="Logitech g503.">View Details</a>
                     </div>
                 </div>
             </div>
@@ -162,7 +162,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Winnie the Pooh Mahjong tiles</h5>
                         <p class="card-text">$100</p>
-                        <a href="details.html" class="btn btn-primary view-details" data-name="Winnie the Pooh Mahjong tiles" data-price="$100" data-image="./images/winnie-the-pooh-mahjong-tiles.webp">View Details</a>
+                        <a href="details.html" class="btn btn-primary view-details" data-name="Winnie the Pooh Mahjong tiles" data-price="$100" data-image="./images/winnie-the-pooh-mahjong-tiles.webp" data-description="Mahjong addicts dream.">View Details</a>
                     </div>
                 </div>
             </div>
