doubled the products LOL

--- a/details.html
+++ b/details.html
@@ -43,7 +43,7 @@
                     <button class="btn btn-primary btn-lg mb-3 w-100">Add to Cart</button>
                     <div class="product-meta">
                         <p><strong>Availability:</strong> In Stock</p>
-                        <p><strong>Category:</strong> Electronics</p>
+                        <p><strong>Category:</strong> dk</p>
                         <p><strong>SKU:</strong> PROD-001</p>
                     </div>
                 </div>
