made the new listings page, will make it connect to main page ltr

--- a/sign-up.html
+++ b/sign-up.html
@@ -29,8 +29,8 @@
     </div>
     <div class="su-bg">
         <video autoplay loop muted playsinline>
-            <source src="./images/blurry lights bg.mp4" type="video/mp4">
-            <source src="./images/blurry lights bg.mp4" type="video/webm">
+            <source src="./images/sign-up-bg.mp4" type="video/mp4">
+            <source src="./images/sign-up-bg.webm" type="video/webm">
             Your browser does not support the video tag.
         </video>
     </div>
