--- a/listings.html
+++ b/listings.html
@@ -24,51 +24,7 @@
             </ul>
         </nav>
     </header>
-    <!-- Featured Items Section -->
-    <h1 style="padding-left: 2%; padding-top: 2%;">My Listings</h1>
-    <section class="container mt-5">
-        <h2 class="mb-4">Featured Items</h2>
-        <div class="row">
-            <div class="col-md-3">
-                <div class="card">
-                    <img src="./images/mahjong keyboard.jpg" class="card-img-top" alt="keyboard">
-                    <div class="card-body">
-                        <h5 class="card-title">Item 1</h5>
-                        <p class="card-text">$100</p>
-                        <a href="#" class="btn btn-primary">View Details</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="card">
-                    <img src="path/to/image1.jpg" class="card-img-top" alt="Item 1">
-                    <div class="card-body">
-                        <h5 class="card-title">Item 1</h5>
-                        <p class="card-text">$100</p>
-                        <a href="#" class="btn btn-primary">View Details</a>
-                    </div>
-                </div>
-            </div>
-            <!-- Repeat for more items -->
-        </div>
-    </section>
-
-    <!-- Categories Section -->
-    <section class="container mt-5">
-        <h2 class="mb-4">Categories</h2>
-        <div class="row">
-            <div class="col-md-3">
-                <div class="card">
-                    <img src="path/to/category1.jpg" class="card-img-top" alt="Category 1">
-                    <div class="card-body">
-                        <h5 class="card-title">Category 1</h5>
-                        <a href="#" class="btn btn-primary">Explore</a>
-                    </div>
-                </div>
-            </div>
-            <!-- Repeat for more categories -->
-        </div>
-    </section>
+    
 
     <!-- Footer -->
     <footer class="bg-dark text-center text-lg-start mt-5">
@@ -78,5 +34,6 @@
     </footer>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
 </body>
 </html>
